--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "nodemon src/server.ts"
   },
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "oauth2-server": "^3.1.1"
+    "oauth2-server": "^3.1.1",
+    "dotenv": "^16.0.3",
+    "body-parser": "^1.20.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/oauth2-server": "^3.0.1",
+    "@types/dotenv": "^8.2.0",
+    "@types/body-parser": "^1.19.1",
     "@types/node": "^18.7.13",
-    "@types/oauth2-server": "^3.0.17",
+    "typescript": "^5.2.2",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1"
   },
   "author": "Your Name",
   "license": "ISC"
